--- a/barter-web/app/globals.css
+++ b/barter-web/app/globals.css
@@ -14,7 +14,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #ededed;
     --foreground: #ededed;
   }
 }
@@ -24,3 +24,8 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.clip-left {
+  clip-path: polygon(0 0, 85% 0, 70% 100%, 0% 100%);
+}
+
